unpackaged/main/default/objects/Contract/fields/Actual_approver__c.field-meta.xml
<CustomField>
    <fullName>Actual_approver__c</fullName>
    <label>Actual approver</label>
    <length>128</length>
    <type>Text</type>
</CustomField>