unpackaged/main/default/objects/Contract/fields/AM_Bolt_on__c.field-meta.xml
<CustomField>
    <fullName>AM_Bolt_on__c</fullName>
    <description>EPH-5479 Additional bolt-ons for Listing and ACP</description>
    <label>AM Bolt-on</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>EBH_Site__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Standard Price</fullName>
            </value>
            <value>
                <fullName>Free</fullName>
            </value>
            <value>
                <fullName>Not Available</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>