unpackaged/main/default/objects/Contract/fields/Business_Contact__c.field-meta.xml
<CustomField>
    <fullName>Business_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>US-0008996 - [Docusign]Making Legal Entity Contact creation a mandatory step for Contract creation</description>
    <inlineHelpText>Please select existing or create a new Contact (on Legal Entity record) with First Name, Last Name and Primary email address to which the contract will be sent for signature.</inlineHelpText>
    <label>Seller Signatory Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.AccountId</field>
            <operation>equals</operation>
            <valueField>$Source.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contracts</relationshipLabel>
    <relationshipName>Contracts</relationshipName>
    <type>Lookup</type>
</CustomField>