unpackaged/main/default/objects/Contract/fields/BusinessContactCity__c.field-meta.xml
<CustomField>
    <fullName>BusinessContactCity__c</fullName>
    <description>US-0009871 - [Refurb] Send Click Agreements to Contract Sellers</description>
    <formula>Business_Contact__r.EBH_MailingCity__c</formula>
    <label>BusinessContactCity</label>
    <type>Text</type>
</CustomField>