unpackaged/main/default/objects/Contract/fields/BusinessContactPostalCode__c.field-meta.xml
<CustomField>
    <fullName>BusinessContactPostalCode__c</fullName>
    <description>US-0009871 - [Refurb] Send Click Agreements to Contract Sellers</description>
    <formula>Business_Contact__r.EBH_MailingPostalCode__c</formula>
    <label>BusinessContactPostalCode</label>
    <type>Text</type>
</CustomField>