unpackaged/main/default/objects/Contract/fields/BusinessContactStreet__c.field-meta.xml
<CustomField>
    <fullName>BusinessContactStreet__c</fullName>
    <description>US-0009871 - [Refurb] Send Click Agreements to Contract Sellers</description>
    <formula>Business_Contact__r.EBH_MailingStreet__c</formula>
    <label>BusinessContactStreet</label>
    <type>Text</type>
</CustomField>