unpackaged/main/default/objects/Contract/fields/Contract_Accept_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Accept_Date__c</fullName>
    <description>US-0009867 - [Refurb] New Seller Refurbished Contracts</description>
    <inlineHelpText>Date When Seller accepted the Contract.</inlineHelpText>
    <label>Contract Accept Date</label>
    <type>Date</type>
</CustomField>