unpackaged/main/default/objects/Contract/fields/Contract_Declined_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Declined_Date__c</fullName>
    <description>US-0009867 - [Refurb] New Seller Refurbished Contracts</description>
    <inlineHelpText>Date when Contract is declined.</inlineHelpText>
    <label>Contract Declined Date</label>
    <type>Date</type>
</CustomField>