unpackaged/main/default/objects/Contract/fields/Contract_Send_Date__c.field-meta.xml
<CustomField>
    <fullName>Contract_Send_Date__c</fullName>
    <description>US-0009867 - [Refurb] New Seller Refurbished Contracts</description>
    <inlineHelpText>Date When Contract is sent to the Seller.</inlineHelpText>
    <label>Contract Send Date</label>
    <type>Date</type>
</CustomField>