unpackaged/main/default/objects/Contract/fields/Contract_Signed_by__c.field-meta.xml
<CustomField>
    <fullName>Contract_Signed_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>US-0009864 - [Docusign] New Signatory details to be added in Contracts</description>
    <inlineHelpText>Business contact name who signed the Contract.</inlineHelpText>
    <label>Contract Signed by</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contracts (Contract Signed by)</relationshipLabel>
    <relationshipName>Contract_Signed</relationshipName>
    <type>Lookup</type>
</CustomField>