unpackaged/main/default/objects/Contract/fields/Declined_Reason__c.field-meta.xml
<CustomField>
    <fullName>Declined_Reason__c</fullName>
    <description>US-0009869 - [Refurb] New Field &quot;Declined Reason&quot; and system validation</description>
    <label>Declined Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Seller is below quality criteria</fullName>
            </value>
            <value>
                <fullName>Seller does not offer retail standards</fullName>
            </value>
            <value>
                <fullName>eBay quit the contract since the seller doesn’t meet the criteria anymore</fullName>
            </value>
            <value>
                <fullName>Seller went offline</fullName>
            </value>
            <value>
                <fullName>Seller does not allocate products in refurbished condition</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>