unpackaged/main/default/objects/Contract/fields/EBH_ApprovalProcessControl__c.field-meta.xml
<CustomField>
    <fullName>EBH_ApprovalProcessControl__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ApprovalProcessControl</label>
    <type>Checkbox</type>
</CustomField>