unpackaged/main/default/objects/Contract/fields/EBH_Approved__c.field-meta.xml
<CustomField>
    <fullName>EBH_Approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[EBH] (EPH-5094) - to track if contract is approved</description>
    <label>Approved?</label>
    <type>Checkbox</type>
</CustomField>