unpackaged/main/default/objects/Contract/fields/EBH_AribaID__c.field-meta.xml
<CustomField>
    <fullName>EBH_AribaID__c</fullName>
    <description>[EBH] (EPH-172) : Ariba ID</description>
    <externalId>true</externalId>
    <label>Ariba ID</label>
    <length>45</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>