unpackaged/main/default/objects/Contract/fields/EBH_AttachmentCheck__c.field-meta.xml
<CustomField>
    <fullName>EBH_AttachmentCheck__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[EBH] (EPH-3971) - Digital signature automation with DocuSign - Flag to check if attachment uploaded before sending to DocuSign</description>
    <label>Attachment Check</label>
    <type>Checkbox</type>
</CustomField>