unpackaged/main/default/objects/Contract/fields/EBH_AutoRenewal__c.field-meta.xml
<CustomField>
    <fullName>EBH_AutoRenewal__c</fullName>
    <description>[EBH] (EPH-172) : Auto-Renewal</description>
    <label>Auto-Renewal</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Once</fullName>
            </value>
            <value>
                <fullName>Rolling</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>