unpackaged/main/default/objects/Contract/fields/EBH_AutoRenewalPeriod__c.field-meta.xml
<CustomField>
    <fullName>EBH_AutoRenewalPeriod__c</fullName>
    <description>[EBH] (EPH-172) : Auto-Renewal Period</description>
    <label>Auto-Renewal Period</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3 months</fullName>
            </value>
            <value>
                <fullName>12 months</fullName>
            </value>
            <value>
                <fullName>Indefinitely</fullName>
            </value>
            <value>
                <fullName>None</fullName>
                <isActive>false</isActive>
                <label>None</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>