unpackaged/main/default/objects/Contract/fields/EBH_AvailablePATinformation__c.field-meta.xml
<CustomField>
    <fullName>EBH_AvailablePATinformation__c</fullName>
    <formula>/*HYPERLINK(&#39;https://ebayinc.sharepoint.com/sites/LegalHUB/MPEU/Pages/Templates-Landing-Page.aspx&#39;, &#39;Click Here&#39;)*/
HYPERLINK(&#39;https://hub.corp.ebay.com/site/legal/page/mpeupreapproved/gb/employee&#39;, &#39;Click Here&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Available PAT information</label>
    <type>Text</type>
</CustomField>