unpackaged/main/default/objects/Contract/fields/EBH_AverageTakeRate__c.field-meta.xml
<CustomField>
    <fullName>EBH_AverageTakeRate__c</fullName>
    <description>[EBH] (EPH-133) : Average Take Rate</description>
    <label>Average Take Rate</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>