unpackaged/main/default/objects/Contract/fields/EBH_Brand__c.field-meta.xml
<CustomField>
    <fullName>EBH_Brand__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>[EBH] (US-0056) : Brand</description>
    <label>Brand</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Brand</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contracts (Brand)</relationshipLabel>
    <relationshipName>EBH_Brands</relationshipName>
    <type>Lookup</type>
</CustomField>