unpackaged/main/default/objects/Contract/fields/EBH_BUApprover__c.field-meta.xml
<CustomField>
    <fullName>EBH_BUApprover__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>[EBH] (EPH-127) : BU Approver</description>
    <inlineHelpText>Please provide the &quot;BU Approver&quot; when the Contract Value exceeds US$500,000.</inlineHelpText>
    <label>BU Approver</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>User.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>User</referenceTo>
    <relationshipName>EBH_BUApprovers</relationshipName>
    <type>Lookup</type>
</CustomField>