unpackaged/main/default/objects/Contract/fields/EBH_BUApproverGroup__c.field-meta.xml
<CustomField>
    <fullName>EBH_BUApproverGroup__c</fullName>
    <description>[EBH] (EPH-4032) - To populate BU Approver Group based on the country and threshold</description>
    <label>BU Approver Group</label>
    <length>200</length>
    <type>Text</type>
</CustomField>