unpackaged/main/default/objects/Contract/fields/EBH_CancellationReason__c.field-meta.xml
<CustomField>
    <fullName>EBH_CancellationReason__c</fullName>
    <description>[EBH] (EPH-127) : to capture the approval comment&#39;s rejection reason</description>
    <label>Cancellation Reason</label>
    <type>TextArea</type>
</CustomField>