unpackaged/main/default/objects/Contract/fields/EBH_ContractAmendment__c.field-meta.xml
<CustomField>
    <fullName>EBH_ContractAmendment__c</fullName>
    <description>[EBH] (EPH-172,175) : Contract/Amendment</description>
    <label>Contract/Amendment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Amendment</fullName>
            </value>
            <value>
                <fullName>Master/ Standalone</fullName>
                <default>true</default>
                <label>Master/ Standalone</label>
            </value>
            <value>
                <fullName>Sub-agreement</fullName>
            </value>
            <value>
                <fullName>Contract</fullName>
                <isActive>false</isActive>
                <label>Contract</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>