unpackaged/main/default/objects/Contract/fields/EBH_ContractExposure__c.field-meta.xml
<CustomField>
    <fullName>EBH_ContractExposure__c</fullName>
    <defaultValue>0</defaultValue>
    <description>[EBH] (US-0017) : Contract Exposure</description>
    <label>Contract Exposure</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>