unpackaged/main/default/objects/Contract/fields/EBH_ContractValue__c.field-meta.xml
<CustomField>
    <fullName>EBH_ContractValue__c</fullName>
    <defaultValue>0</defaultValue>
    <description>[EBH] (US-0017) : Contract Value</description>
    <label>Contract Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>