unpackaged/main/default/objects/Contract/fields/EBH_ControllingApproved__c.field-meta.xml
<CustomField>
    <fullName>EBH_ControllingApproved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[EBH] (EPH-4032)</description>
    <label>Controlling Approved?</label>
    <type>Checkbox</type>
</CustomField>