unpackaged/main/default/objects/Contract/fields/EBH_ControllingApprover__c.field-meta.xml
<CustomField>
    <fullName>EBH_ControllingApprover__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>[EBH] (EPH-144) : Controlling  approver of the contract</description>
    <label>APG Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>EBH_ControllingContracts</relationshipName>
    <type>Lookup</type>
</CustomField>