unpackaged/main/default/objects/Contract/fields/EBH_DateApproved__c.field-meta.xml
<CustomField>
    <fullName>EBH_DateApproved__c</fullName>
    <description>[EBH] (US-0039) : to capture the date, when Contract Status is changed to &#39;Approved&#39;</description>
    <label>Date Approved</label>
    <type>Date</type>
</CustomField>