unpackaged/main/default/objects/Contract/fields/EBH_DateCustomerSignatureReturned__c.field-meta.xml
<CustomField>
    <fullName>EBH_DateCustomerSignatureReturned__c</fullName>
    <description>[EBH] (US-0039) : to capture the date, when Contract status is changed to Customer Sign returned.</description>
    <label>Date Customer Signature Returned</label>
    <type>Date</type>
</CustomField>