unpackaged/main/default/objects/Contract/fields/EBH_DateFinancePrechecked__c.field-meta.xml
<CustomField>
    <fullName>EBH_DateFinancePrechecked__c</fullName>
    <description>[EBH] (US-0039) : To capture the date when the contract status is changed to Finance pre-checked</description>
    <label>Date Finance Pre-checked</label>
    <type>Date</type>
</CustomField>