unpackaged/main/default/objects/Contract/fields/EBH_DateSentforCustomerSignature__c.field-meta.xml
<CustomField>
    <fullName>EBH_DateSentforCustomerSignature__c</fullName>
    <description>[EBH] (US-0039) : to capture the date when the Contract status is changed to Sent for Customer Signature</description>
    <label>Date Sent for Customer Signature</label>
    <type>Date</type>
</CustomField>