unpackaged/main/default/objects/Contract/fields/EBH_DateSentforFinancePrecheck__c.field-meta.xml
<CustomField>
    <fullName>EBH_DateSentforFinancePrecheck__c</fullName>
    <description>[EBH] (US-0039) : To capture the timestamp when the Contract status changes to &#39;Sent for Finance Pre-check&#39;</description>
    <label>Date Sent for Finance Pre-check</label>
    <type>Date</type>
</CustomField>