unpackaged/main/default/objects/Contract/fields/EBH_DateSentforFirstApproval__c.field-meta.xml
<CustomField>
    <fullName>EBH_DateSentforFirstApproval__c</fullName>
    <description>[EBH] (US-0039) : To capture the date when the Contract status is changed to Pending Approval</description>
    <label>Date Sent for First Approval</label>
    <type>Date</type>
</CustomField>