unpackaged/main/default/objects/Contract/fields/EBH_DateSentforNegotiation__c.field-meta.xml
<CustomField>
    <fullName>EBH_DateSentforNegotiation__c</fullName>
    <description>[EBH] (US-0039) : To capture the date when status of the Contract is changed to In Negotiation</description>
    <label>Date Sent for Negotiation</label>
    <type>Date</type>
</CustomField>