unpackaged/main/default/objects/Contract/fields/EBH_DaysInNegotiation__c.field-meta.xml
<CustomField>
    <fullName>EBH_DaysInNegotiation__c</fullName>
    <description>[EBH] (EPH-142) : Days In Negotiation</description>
    <formula>If( EBH_DateSentforFirstApproval__c -  EBH_DateSentforNegotiation__c &gt;=0,
EBH_DateSentforFirstApproval__c -  EBH_DateSentforNegotiation__c,
null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days In Negotiation</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>