unpackaged/main/default/objects/Contract/fields/EBH_DaysPendingApproval__c.field-meta.xml
<CustomField>
    <fullName>EBH_DaysPendingApproval__c</fullName>
    <description>[EBH] (EPH-142) : Days Pending Approval</description>
    <formula>If( EBH_DateApproved__c -  EBH_DateSentforFirstApproval__c &gt;= 0,
EBH_DateApproved__c -  EBH_DateSentforFirstApproval__c,
null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Pending Approval</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>