unpackaged/main/default/objects/Contract/fields/EBH_DaysPendingCustomerSignature__c.field-meta.xml
<CustomField>
    <fullName>EBH_DaysPendingCustomerSignature__c</fullName>
    <description>[EBH] (EPH-142) : Days Pending Customer Signature</description>
    <formula>If ( CustomerSignedDate -  EBH_DateSentforCustomerSignature__c &gt;= 0,
CustomerSignedDate -  EBH_DateSentforCustomerSignature__c,
null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Pending Customer Signature</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>