unpackaged/main/default/objects/Contract/fields/EBH_DaysPendingeBaySignature__c.field-meta.xml
<CustomField>
    <fullName>EBH_DaysPendingeBaySignature__c</fullName>
    <description>[EBH] (EPH-142) : Days Pending eBay Signature</description>
    <formula>If ( CompanySignedDate -  EBH_DateCustomerSignatureReturned__c &gt;= 0,
CompanySignedDate -  EBH_DateCustomerSignatureReturned__c,
null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Pending eBay Signature</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>