unpackaged/main/default/objects/Contract/fields/EBH_DaysPendingFinancePrecheck__c.field-meta.xml
<CustomField>
    <fullName>EBH_DaysPendingFinancePrecheck__c</fullName>
    <description>[EBH] (EPH-142) : Days Pending Finance Pre-check</description>
    <formula>If( EBH_DateFinancePrechecked__c -  EBH_DateSentforFinancePrecheck__c &gt;= 0,
EBH_DateFinancePrechecked__c -  EBH_DateSentforFinancePrecheck__c,
null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Pending Finance Pre-check</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>