unpackaged/main/default/objects/Contract/fields/EBH_DeceleratorThreshold__c.field-meta.xml
<CustomField>
    <fullName>EBH_DeceleratorThreshold__c</fullName>
    <description>[EBH] (EPH-133) : Decelerator Threshold,
US-0010717 - Accelerator &amp; Decelerator target fields tooltip descriptions</description>
    <inlineHelpText>Enter the percentage of target the customer needs to achieve to qualify for the decelerator tier rebate</inlineHelpText>
    <label>Decelerator Tier Threshold (% of Target)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>