unpackaged/main/default/objects/Contract/fields/EBH_DeceleratorTierrebate__c.field-meta.xml
<CustomField>
    <fullName>EBH_DeceleratorTierrebate__c</fullName>
    <description>[EBH] (EPH-133) : Decelerator Tier (% rebate),
US-0010717 - Accelerator &amp; Decelerator target fields tooltip descriptions</description>
    <inlineHelpText>Enter the percentage rebate the customer will get on their FVF if they achieve the decelerator target</inlineHelpText>
    <label>Decelerator Tier (% rebate)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>