unpackaged/main/default/objects/Contract/fields/EBH_eBayLegalEntity__c.field-meta.xml
<CustomField>
    <fullName>EBH_eBayLegalEntity__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>[EBH] (EPH-172) : eBay Legal Entity</description>
    <label>eBay Legal Entity</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>EBH_LegalEntity</value>
        </filterItems>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Contracts (eBay Legal Entity)</relationshipLabel>
    <relationshipName>EBH_eBayLegalEntities</relationshipName>
    <type>Lookup</type>
</CustomField>