unpackaged/main/default/objects/Contract/fields/EBH_eBaySignatureType__c.field-meta.xml
<CustomField>
    <fullName>EBH_eBaySignatureType__c</fullName>
    <description>[EBH] (EPH-172) : eBay Signature Type</description>
    <label>eBay Signature Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Electronic</fullName>
            </value>
            <value>
                <fullName>Wet</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>