unpackaged/main/default/objects/Contract/fields/EBH_eBaySignedBy__c.field-meta.xml
<CustomField>
    <fullName>EBH_eBaySignedBy__c</fullName>
    <description>[EBH] (EPH-1982) : eBay Signed By</description>
    <label>eBay Signed By</label>
    <length>255</length>
    <type>Text</type>
</CustomField>