unpackaged/main/default/objects/Contract/fields/EBH_EnvelopLink__c.field-meta.xml
<CustomField>
    <fullName>EBH_EnvelopLink__c</fullName>
    <description>[EBH] (EPH-3974) - DocuSign envelope link sent for signature</description>
    <label>Envelop Link</label>
    <type>Url</type>
</CustomField>