unpackaged/main/default/objects/Contract/fields/EBH_EstimatedGMVforContractPeriod__c.field-meta.xml
<CustomField>
    <fullName>EBH_EstimatedGMVforContractPeriod__c</fullName>
    <description>[EBH] (EPH-5474) - To summarise the projected 12M GMV for related Listing records
US-0008177 - [Contracts] Field &quot;Estimated GMV for Contract Period&quot; filter criteria to be removed in the roll up summary be amended</description>
    <label>Estimated GMV for Contract Period</label>
    <summarizedField>EBH_Pricing__c.EBH_Projected12MGMV__c</summarizedField>
    <summaryForeignKey>EBH_Pricing__c.EBH_ContractId__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>