unpackaged/main/default/objects/Contract/fields/EBH_eTRSEligible__c.field-meta.xml
<CustomField>
    <fullName>EBH_eTRSEligible__c</fullName>
    <description>[EBH] (US-0002) : eTRS Eligible</description>
    <label>eTRS Eligible</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Yes</fullName>
                <default>true</default>
                <label>Yes</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>