unpackaged/main/default/objects/Contract/fields/EBH_EUSignNotes__c.field-meta.xml
<CustomField>
    <fullName>EBH_EUSignNotes__c</fullName>
    <description>[EBH] (EPH-5140) - To capture EU sign notes</description>
    <label>Team</label>
    <type>TextArea</type>
</CustomField>