unpackaged/main/default/objects/Contract/fields/EBH_FinanceAgreesinPrincipal__c.field-meta.xml
<CustomField>
    <fullName>EBH_FinanceAgreesinPrincipal__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[EBH] (EPH-1387) : Finance Agrees in Principal</description>
    <label>Finance Agrees in Principal</label>
    <type>Checkbox</type>
</CustomField>