unpackaged/main/default/objects/Contract/fields/EBH_FinanceApproved__c.field-meta.xml
<CustomField>
    <fullName>EBH_FinanceApproved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[EBH] (EPH-4032) - To track whether the Finance approved</description>
    <label>Finance Approved?</label>
    <type>Checkbox</type>
</CustomField>