unpackaged/main/default/objects/Contract/fields/EBH_FinanceApprover__c.field-meta.xml
<CustomField>
    <fullName>EBH_FinanceApprover__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>[EBH] (EPH-128) : Finance Approver</description>
    <label>Finance Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>EBH_FinanceApprovers</relationshipName>
    <type>Lookup</type>
</CustomField>