unpackaged/main/default/objects/Contract/fields/EBH_FinancePostCheckDone__c.field-meta.xml
<CustomField>
    <fullName>EBH_FinancePostCheckDone__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[EBH] (EPH-5068) - To track if finance post check is done</description>
    <label>Finance Post Check done</label>
    <type>Checkbox</type>
</CustomField>