unpackaged/main/default/objects/Contract/fields/EBH_FinancePreCheckApprover__c.field-meta.xml
<CustomField>
    <fullName>EBH_FinancePreCheckApprover__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>[EBH] (EPH-135) : Finance (Pre-Check) approver of the contract</description>
    <label>Finance (Pre-Check) Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>EBH_FinancePreCheckContracts</relationshipName>
    <type>Lookup</type>
</CustomField>