unpackaged/main/default/objects/Contract/fields/EBH_GMVforContractPeriod__c.field-meta.xml
<CustomField>
    <fullName>EBH_GMVforContractPeriod__c</fullName>
    <description>[EBH] (EPH-170) : GMV for Contract Period: Updated label as part of EPH-5474</description>
    <label>GMV Targets for Contract Period</label>
    <summarizedField>EBH_Pricing__c.EBH_GMVTarget__c</summarizedField>
    <summaryFilterItems>
        <field>EBH_Pricing__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>ACP Targets</value>
    </summaryFilterItems>
    <summaryForeignKey>EBH_Pricing__c.EBH_ContractId__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>