unpackaged/main/default/objects/Contract/fields/EBH_IncrementalGMVonly__c.field-meta.xml
<CustomField>
    <fullName>EBH_IncrementalGMVonly__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[EBH] (EPH-4031) - for revenue share contracts</description>
    <label>Incremental GMV only?</label>
    <type>Checkbox</type>
</CustomField>